@@ -200,7 +200,7 @@ Starts with first value.
   <pre>
 # Tests generated by: guppy.gsl.Tester
 # Main source file: /home/sverker/guppy-pe/trunk/guppy/specs/docexample.gsl
-# Date: Mon Apr  7 19:21:02 2008
+# Date: Tue Apr  8 18:17:03 2008
 class Tester:
     tests = {}
     def test_example_kind(self, arg):
@@ -266,4 +266,4 @@ class Tester:
     tests['.tgt.docexample.example_kind'] = test_example_kind
 </pre><! --  end pre
      -->
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Mon Apr  7 19:21:02 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue Apr  8 18:17:03 2008</div></body></html>
