@@ -1,4 +1,12 @@
 	Version 0.1.7
+
+
+	
+2008-04-08  Sverker Nilsson  <sverker@sverker-laptop>
+
+	* guppy/gsl/Main.py (find_aspects_inseq): as->as_
+	  Several other GSL-related files as -> as_
+	
 	
 2008-04-07  Sverker Nilsson  <sverker@sverker-laptop>
 
